--- a/practicles/Test-Web/src/main/webapp/index.html
+++ b/practicles/Test-Web/src/main/webapp/index.html
@@ -10,7 +10,7 @@
 <main>
   <dev>
     <h1>Customer Form</h1>
-    <form action="http://localhost:8080/app/customers" method="post" enctype="application/x-www-form-urlencoded">
+    <form action="http://localhost:8080/app/customers" method="get">
       <label for="id">ID</label>
       <input type="text" id="id" placeholder="c001"name="cusId">
       <label for="usrName">Name</label>
