--- a/practicles/Test-Web/src/main/webapp/index.html
+++ b/practicles/Test-Web/src/main/webapp/index.html
@@ -2,24 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Customer Form</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Customer</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
+    <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/img/logo/kade-logo.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
-<main>
-  <dev>
-    <h1>Customer Form</h1>
-    <form action="http://localhost:8080/app/customers" method="get">
-      <label for="id">ID</label>
-      <input type="text" id="id" placeholder="c001"name="cusId">
-      <label for="usrName">Name</label>
-      <input type="text" id="usrName" placeholder="dewmith Mihisara"name="cusName">
-      <label for="address">Address</label>
-      <input type="text" id="address" placeholder="Galle"name="cusAdd">
-      <button type="submit">Submit</button>
-    </form>
-  </dev>
+<header>
+</header>
+<main class="d-flex justify-content-center align-items-center">
+    <section id="particles-js"></section>
+    <section id="customerForm" class="container border border-info shadow-lg p-3 mb-5 bg-body-tertiary rounded-5 bg ">
+        <div class="row d-flex justify-content-between ttl">
+            <div class="col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4 ps-5 pt-4">
+                <h1 class="display-4 h1"><i class="bi bi-people-fill"></i>Customer</h1>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center con">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 col-xxl-4 border mx-3 rounded-5">
+                <form class="row g-3 mt-2">
+                    <div class="col-12">
+                        <label for="id" class="form-label">Id</label>
+                        <input type="text" class="form-control" id="id" placeholder="C-0001">
+                    </div>
+                    <div class="col-12">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Amarabandu">
+                    </div>
+                    <div class="col-12">
+                        <label for="inputAddress" class="form-label">Address</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="WWGG+QG3, B231, Angoda">
+                    </div>
+                    <div class="col-12">
+                        <button type="button" class="btn btn-outline-success" id="cusSv">Save</button>
+                        <button type="button" class="btn btn-outline-primary" id="cusUpdt">Update</button>
+                        <button type="button" class="btn btn-outline-danger" id="cusDel">Delete</button>
+                        <button type="button" class="btn btn-outline-warning" id="cusGetAll">Get All</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 border rounded-5 overflow-hidden overflow-y-scroll">
+                <table id="tbl" class="table mt-2 table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Address</th>
+                    </tr>
+                    </thead>
+                    <tbody id="tblBody">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+
 </main>
+<script src="assets/bootstrap/js/bootstrap.js"></script>
+<script src="assets/js/particles.js"></script>
+<script src="assets/js/app.js"></script>
+<script src="assets/js/jquery.js"></script>
 </body>
 </html>
